change from Aslak to avoid squashing cucumber image

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -45,7 +45,6 @@
   #cucumber-container {
     #cucumber-image {
       padding: 0px;
-        width: 85px;
        height: 27px;
        margin: 0px;
     }
